--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -60,9 +60,9 @@
                 </div>
             </div>
             <div class="parallax-container">
-                <div class="parallax">
-                      <div class="video-container">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= trailers.results[0].key %>?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+                <div class="parallax" style="z-index:1;">
+                      <div class="video-container" style="height:100%;padding-bottom:0%;">
+                            <iframe src="https://www.youtube.com/embed/<%= trailers.results[0].key %>?autoplay=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
                       </div>
             </div>
             <div class="section white">
@@ -85,9 +85,9 @@
                 </div>
             </div>
             <div class="parallax-container">
-                <div class="parallax"><img src="https://image.tmdb.org/t/p/w1280<%= posters.backdrops[1].file_path %>" alt="Image not found" onerror="this.onerror=null;this.src='/img/altbg.jpg';"></div>
+                <div class="parallax"><img src="https://image.tmdb.org/t/p/w1280<%= posters.backdrops[1].file_path %>" style="opacity:1;" alt="Image not found" onerror="this.onerror=null;this.src='/img/altbg.jpg';"></div>
             </div>
-                        <div class="section white">
+            <div class="section white">
                 <div class="row container">
                     <h2 class="header center-align"><%= movies.title %></h2>
                         <h5 class="bld">Budget:</h5> <p><%= movies.budget %></p>
@@ -100,17 +100,20 @@
                         </p>
                 </div>
             </div>
+            
             <script
                 src="https://code.jquery.com/jquery-3.3.1.min.js"
                 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
                 crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+            
             <script>  $(document).ready(function(){
-                    $('.parallax').parallax();
+                $('.parallax').parallax();
             });
             </script>
             <script>  $(document).ready(function(){
                 $('.carousel').carousel();
-                });</script>
+                });
+            </script>
 </body>
 </html>
