--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -65,6 +65,9 @@
                             <iframe src="https://www.youtube.com/embed/<%= trailers.results[0].key %>?autoplay=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
                       </div>
             </div>
+
+
+
             <div class="section white">
                 <div class="row container">
                     <h2 class="header center-align">Cast</h2>
@@ -80,6 +83,9 @@
                             <a class="carousel-item" href="https://www.themoviedb.org/person/<%= credits.cast[8].id %>" target="blank"><img src="http://image.tmdb.org/t/p/h632/<%= credits.cast[8].profile_path %>"></a>
                             <a class="carousel-item" href="https://www.themoviedb.org/person/<%= credits.cast[9].id %>" target="blank"><img src="http://image.tmdb.org/t/p/h632/<%= credits.cast[9].profile_path %>"></a>
                             <a class="carousel-item" href="https://www.themoviedb.org/person/<%= credits.cast[10].id %>" target="blank"><img src="http://image.tmdb.org/t/p/h632/<%= credits.cast[10].profile_path %>"></a>
+                            <a class="carousel-item" href="https://www.themoviedb.org/person/<%= credits.cast[11].id %>" target="blank"><img src="http://image.tmdb.org/t/p/h632/<%= credits.cast[10].profile_path %>"></a>
+                            <a class="carousel-item" href="https://www.themoviedb.org/person/<%= credits.cast[12].id %>" target="blank"><img src="http://image.tmdb.org/t/p/h632/<%= credits.cast[10].profile_path %>"></a>
+                            <a class="carousel-item" href="https://www.themoviedb.org/person/<%= credits.cast[13].id %>" target="blank"><img src="http://image.tmdb.org/t/p/h632/<%= credits.cast[10].profile_path %>"></a>
 
                     </div>
                 </div>
